--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -7,6 +7,7 @@
         "Git": "Git",
         "Img": "图片",
         "Laya": "Laya",
+        "Server": "服务器",
         "Quit": "退出",
         "Edit": "编辑",
         "Cut": "剪切",
@@ -71,15 +72,8 @@
             "Push": "推送",
             "Merge": "合并",
             "Project": "项目操作",
-            "Project Lock": "获取操作权",
-            "Project Unlock": "归还操作权",
-            "Project Fetch": "检查更新",
-            "Project Pull": "项目 -> 平台",
-            "Project Push": "平台 -> 项目",
             "Project Module Setting": "项目设置",
-            "Project Develop": "开发平台",
-            "Project Release": "发布平台",
-            "Platform Modify": "平台专属改动",
+            "Platform Setting": "平台设置",
             "Search Repo": "仓库查找（暂不可用）",
             "Add Repo": "添加仓库",
             "Clone Repo": "克隆远程仓库",
@@ -130,22 +124,43 @@
             "Comfirm Module Free Delete": "确认删除模块（%module%）？",
             "Error module dependencies": "依赖出错，被依赖的模块不存在",
 
-            "Platform Dev": "开发平台",
-            "Platform Rel": "发布平台",
             "Platform Unknown": "未知平台",
-            "Platform Name": "平台名",
+            "Platform New Name": "新平台名",
+            "Platform Alias": "平台昵称",
             "Platform Suffix": "平台后缀（会加到RunMode最后）",
+            "Platform Select Env": "选择设置环境",
+            "Platform Env Inter": "内测",
+            "Platform Env Outer Test": "外测",
+            "Platform Env Outer": "正式",
+            "Platform Server Path": "代码资源正式路径",
+            "Platform Server Path Inner Test": "代码资源内测路径",
+            "Platform Server Path Outer Test": "代码资源外测路径",
+            "Platform CDN": "CDN完整路径（正式）",
+            "Platform CDN Outer Test": "CDN完整路径（外测）",
+            "Platform CDN Inner Test": "CDN完整路径（内测）",
+            "Platform Select": "选择平台",
             "Platform Module Pick": "模块选择（可筛选）",
-            "Platform Dev Create": "创建 【开发平台】 ",
-            "Platform Rel Create": "创建 【发布平台】 ",
+            "Platform Server Index Pick": "入口文件服务器选择（可筛选）",
+            "Platform Server Index Pick Outer": "正式入口文件服务器选择（可筛选）",
+            "Platform Server Index Pick Inter": "内测入口文件服务器选择（可筛选）",
+            "Platform Server Index Pick Outer Test": "外测入口文件服务器选择（可筛选）",
+            "Platform Server Pick": "代码资源服务器选择（可筛选）",
+            "Platform Server Pick Outer": "正式代码资源服务器选择（可筛选）",
+            "Platform Server Pick Inter": "内测代码资源服务器选择（可筛选）",
+            "Platform Server Pick Outer Test": "外测代码资源服务器选择（可筛选）",
+            "Platform Index WeChat": "正式入口文件名（微信）",
+            "Platform Index Inner": "内测入口文件名",
+            "Platform Index Outer": "外测入口文件名",
+            "Platform Rel Create": "创建平台",
             "Msg Checking Modules": "正在读取模块...",
             "Comfirm Module Create": "将基于当前分支（%branch%）创建平台（%platform%）",
             "Error platform name empty": "平台名不能为空",
-            "Error platform inconsist": "平台不一致，当前平台为【%platform%】",
             "Error platform config not found": "未找到平台配置文件",
             "Error cannot get platform paths": "无法获取平台文件路径",
             "Msg Platform Already Update-to-date": "平台文件已最新",
-            "Msg Master Already Update-to-date": "项目文件已最新"
+            "Msg Master Already Update-to-date": "项目文件已最新",
+            "Third Party No Pack": "不需要打包的第三方库（可筛选）",
+            "No Compress Img":"不压缩的图片路径，以,隔开"
         },
 
         "LeftBar": {
@@ -158,13 +173,90 @@
         }
     },
 
+    "Image": {
+        "Close": "关闭",
+        "Compress Img": "压缩图片（自动更新资源版本）",
+        "Checking Img": "检查图片",
+        "Tiny Img": "压缩图片",
+        "Img Version": "资源版本",
+        "Tiny Finish": "完成",
+        "Tip1": "对比bin下所有文件和version.json，压缩所有变更的PNG，原图请自行备份",
+        "Comfirm Tiny Img": "确认压缩图片？",
+        "Error Compress JS Path Empty": "项目路径未知，请先切换到Git管理器再切回来试试",
+        "Error Tiny Fail": "压缩失败，具体查看console"
+    },
+
     "Laya": {
         "Close": "关闭",
         "Finish": "完成",
         "Compress JS": "打包JS",
         "Package JS": "打包JS（不压缩）",
+        "Merge JSON": "合并JSON",
+        "Resource Version": "资源版本（合并JSON）",
+        "Platform Select": "选择平台",
+        "One Click": "一键打包（资源版本（合并JSON） + 压缩JS）",
+        "Upload": "上传服务器",
+        "Uploading To": "上传至",
+        "Server Count": "服务器数量",
+        "Checking Path": "检查路径",
+        "Uploading Resource": "上传资源",
+        "Uploading Code": "上传代码",
+        "Updating Version": "更新版本号",
+        "Uploading Finish": "上传完成",
+        "Run Env": "运行环境",
+        "Run Env Inter": "内测",
+        "Run Env Outer": "正式",
+        "Run Env Outer Test": "外测",
+        "SDK": "SDK",
+        "SDK WeChat": "微信",
+        "Info Running": "单线程作业，UI会卡一会儿，不要介意，不要吐槽，否则，(╯‵□′)╯︵┻━┻，你来啊！",
         "Comfirm Compress JS": "确认打包JS？",
         "Comfirm Package JS": "确认打包JS？",
-        "Error Compress JS Path Empty": "项目路径未知，请先切换到Git管理器再切回来试试"
+        "Comfirm Resource Version": "确认合并JSON并生成资源版本？",
+        "Comfirm One Click": "确认一键打包？",
+        "Comfirm Upload": "确认上传？",
+        "Error Compress JS Path Empty": "项目路径未知，请先切换到Git管理器再切回来试试",
+        "Error Not JSON Path": "没有找到JSON路径",
+        "Error Unselect Platform": "未选择平台",
+        "Error Unselect RunEnv": "未选择运行环境",
+        "Error Unselect SDK": "未选择SDK",
+        "Error SFTP": "SFTP出错，具体查看开发者工具",
+        "Error Zero Servers": "平台未配置服务器",
+        "Error Found Img Need Update": "发现有图片需要更新，下次记得先压缩图片"
+    },
+
+    "Server": {
+        "Error": "错误",
+        "Finish": "完成",
+        "Empty": "空空如也",
+        "Server Type": "服务器类型",
+        "Server Name": "服务器名",
+        "Server Name Index": "入口服务器",
+        "Server Name Reource": "资源服务器",
+        "Host": "地址",
+        "Port": "端口",
+        "User": "用户",
+        "Password": "密码",
+        "SDK": "SDK",
+        "SDK WeChat": "微信",
+        "Environment": "运行环境",
+        "Run Env Inter": "内测",
+        "Run Env Outer": "正式",
+        "Run Env Outer Test": "外测",
+        "Server Type Index": "入口",
+        "Server Type Resource": "资源",
+        "Operation": "操作",
+        "Add": "新增",
+        "Modify": "修改",
+        "Save": "保存",
+        "Delete": "删除",
+        "Filtrate Env": "筛选环境",
+        "Index Path": "入口文件路径",
+        "Tip1": "仅支持SFTP",
+        "Comfirm Delete Server": "确认删除（%serverName%）？",
+        "Error Project Path Empty": "项目路径未知，请先切换到Git管理器再切回来试试",
+        "Error Server Name Duplicated": "服务器名已存在",
+        "Error Server Type Empty": "服务器类型不能为空",
+        "Error Server Env Empty": "运行环境不能为空"
     }
 }
